--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                     "sellingPrice": 50,
                     "stock": 1,
                     "discount": 15,
-                    "images": ["20.jpeg"]
+                    "images": ["20.jpeg", "20-1.jpeg"]
                 },
                 {
                     "id": "CAM-00021",
