--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
                     "sellingPrice": 160,
                     "stock": 5,
                     "discount": 20,
-                    "images": ["28.jpeg"]
+                    "images": ["28.jpeg", "28-1.jpeg", "28-2.jpeg"]
                 },
                 {
                     "id": "CAM-00029",
@@ -1006,7 +1006,7 @@
                     "sellingPrice": 160,
                     "stock": 5,
                     "discount": 20,
-                    "images": ["29.jpeg"]
+                    "images": ["29.jpeg", "29-1.jpeg", "29-2.jpeg"]
                 },
                 {
                     "id": "CAM-00030",
@@ -1015,7 +1015,7 @@
                     "sellingPrice": 140,
                     "stock": 1,
                     "discount": 15,
-                    "images": ["30.jpeg"]
+                    "images": ["30.jpeg", "30-1.jpeg", "30-2.jpeg"]
                 },
                 {
                     "id": "CAM-00031",
@@ -1024,7 +1024,7 @@
                     "sellingPrice": 140,
                     "stock": 2,
                     "discount": 15,
-                    "images": ["31.jpeg"]
+                    "images": ["31.jpeg", "31-1.jpeg", "31-2.jpeg"]
                 },
                 {
                     "id": "CAM-00032",
@@ -1033,7 +1033,7 @@
                     "sellingPrice": 120,
                     "stock": 4,
                     "discount": 15,
-                    "images": ["32.jpeg"]
+                    "images": ["32.jpeg", "32-1.jpeg", "32-2.jpeg"]
                 },
             ]
         };
