--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
                     "sellingPrice": 160,
                     "stock": 5,
                     "discount": 20,
-                    "images": ["28.jpeg", "28-1.jpeg", "28-2.jpeg"]
+                    "images": ["28.jpeg", "28-1.jpeg", "28-2.jpeg", "28-3.jpeg", "28-4.jpeg", "28-5.jpeg"]
                 },
                 {
                     "id": "CAM-00029",
