--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                     "sellingPrice": 160,
                     "stock": 5,
                     "discount": 20,
-                    "images": ["29.jpeg", "29-1.jpeg", "29-2.jpeg"]
+                    "images": ["29.jpeg", "29-1.jpeg", "29-2.jpeg", "29-3.jpeg", "29-4.jpeg", "29-5.jpeg"]
                 },
                 {
                     "id": "CAM-00030",
