--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                     "sellingPrice": 120,
                     "stock": 4,
                     "discount": 15,
-                    "images": ["32.jpeg", "32-1.jpeg", "32-2.jpeg"]
+                    "images": ["32.jpeg", "32-1.jpeg", "32-2.jpeg", "32-3.jpeg", "32-4.jpeg", "32-5.jpeg", "32-6.jpeg"]
                 },
             ]
         };
