--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camarim - Catálogo Online</title>
+    <meta name="description" content="Catálogo online da Camarim. Calçados, bolsas, cintos e roupas esportivas com descontos de até 30%. Faça seu pedido pelo WhatsApp!">
     <!-- Favicon adicionado -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -720,7 +721,7 @@
     <!-- Banner sem os símbolos de % -->
     <div class="sale-banner">
         <i class="fas fa-percentage"></i>
-        <p>PROMOÇÃO! DESCONTOS EXCLUSIVOS EM CADA PRODUTO</p>
+        <p>PROMOÇÕES EM VÁRIOS PRODUTOS</p>
         <i class="fas fa-percentage"></i>
     </div>
 
